examples/test/testpolicy19020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19020
  namespace: namespace17
spec:
  podSelector:
    matchLabels:
      key2: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value27
          key10: value43
      podSelector:
        matchLabels:
          key20: value44
          key43: value16
